--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Thecoffee</title>
+  <title>HCMUTE - Hoạt động đoàn hội</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/png" href="//hcmute.edu.vn/Resources/Imagephoto/logo.png" />
 
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/core.css">
@@ -15,6 +15,36 @@
   <link rel="stylesheet" href="./assets/css/responsive.css">
   <link rel="stylesheet" href="./assets/css/components.css">
   <script src="./assets/js/modernizr.min.js"></script>
+  <style>
+    .pagination .current {
+      background: #222 !important;
+      color: #fff !important;
+      /*font-size: 14px !important;*/
+      font-weight: bold;
+      padding: 10px 15px !important;
+    }
+
+    .pagination li {
+      /*padding: 10px 15px;*/
+    }
+
+    .pagination a {
+      padding: 10px 15px !important;
+      background-color: #7e57c2 !important;
+      font-weight: 700 !important;
+      color: #fff !important;
+    }
+
+    .pagination a:hover {
+      padding: 10px 15px !important;
+      background: #222 !important;
+      color: #fff !important;
+    }
+
+    .ngx-pagination {
+      padding-left: 0px
+    }
+  </style>
 </head>
 
 <body class="fixed-left widescreen">
