Upload file, show img

--- a/src/main.html
+++ b/src/main.html
@@ -7,7 +7,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
+  <script type="text/javascript" src="https://connect.facebook.net/vi_VN/sdk.js"></script>
   <link type="text/css" rel="stylesheet" href="https://www.blogger.com/static/v1/widgets/124887373-widget_css_bundle.css">
   <link type="text/css" rel="stylesheet" href="https://www.blogger.com/dyn-css/authorization.css?targetBlogID=7631169550871736396&amp;zx=ced95ae3-0548-4db6-bb6b-0bf64b939d6b">
   <link rel="stylesheet" href="../assets/css/index.css">
@@ -44,6 +44,7 @@
 </head>
 
 <body>
+
   <main-root>
     <i class="fa fa-spinner" aria-hidden="true"></i>
   </main-root>
