--- a/src/main.html
+++ b/src/main.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="../assets/css/index.css">
   <style>
     .pagination .current {
-      background: #222 !important;
+      /*background: #222 !important;*/
       color: #fff !important;
       /*font-size: 14px !important;*/
       font-weight: bold;
