--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -17,7 +17,7 @@
   <script src="./assets/js/modernizr.min.js"></script>
   <style>
     .pagination .current {
-      background: #222 !important;
+      /*background: #222 !important;*/
       color: #fff !important;
       /*font-size: 14px !important;*/
       font-weight: bold;
