Fix home pages, bugs

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -30,7 +30,7 @@
 
     .pagination a {
       padding: 10px 15px !important;
-      background-color: #7e57c2 !important;
+      background-color: #0e76bc !important;
       font-weight: 700 !important;
       color: #fff !important;
     }
@@ -49,7 +49,7 @@
 
 <body class="fixed-left widescreen">
   <div id="wrapper">
-    <app-root>Loading...</app-root>
+    <app-root></app-root>
   </div>
   <script>
     var resizefunc = [];
